--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <link rel="stylesheet" href="https://raw.githubusercontent.com/askarthi1611/rough/main/styles3fb129014ebb7a83.css"></noscript></head>
 <body>
   <app-root></app-root>
-  <script src="https://raw.githubusercontent.com/askarthi1611/rough/main/runtime0d8d0b5cf03931ee.js" type="text/module"></script>
-<script src="https://raw.githubusercontent.com/askarthi1611/rough/main/polyfills836e3dcf2d4fe2ec.js" type="text/module"></script>
+  <script src="https://raw.githubusercontent.com/askarthi1611/rough/main/runtime0d8d0b5cf03931ee.js" type="module"></script>
+<script src="https://raw.githubusercontent.com/askarthi1611/rough/main/polyfills836e3dcf2d4fe2ec.js" type="module"></script>
 <script src="https://raw.githubusercontent.com/askarthi1611/rough/main/scriptsc438e3a3f3899521.js" defer></script>
-<script src="https://raw.githubusercontent.com/askarthi1611/rough/main/main6eea71bed63281e5.js" type="text/module"></script>
+<script src="https://raw.githubusercontent.com/askarthi1611/rough/main/main6eea71bed63281e5.js" type="module"></script>
 
 
 </body></html>
